--- a/Semana 5/INDEX.html
+++ b/Semana 5/INDEX.html
@@ -8,8 +8,84 @@
     <link rel="shortcut icon" href="img/HTML5.png" type="image/x-icon">
     <!-- Link para enlazar con página web fontawesome -->
     <script src="https://kit.fontawesome.com/a1124a3708.js" crossorigin="anonymous"></script>
+    <!-- link de hoja de estilos (CSS) -->
+    <link rel="stylesheet" href="./css/css_index.css">
 </head>
 <body>
-    
+    <div id="grid-container">
+        <header id="header">
+            <img src="./img/incap.png" alt="" width="100" height="100">
+            <h1>ESCUELA DE SISTEMAS Y DISEÑO GRÁFICO</h1>
+        </header>
+        <nav id="menu">
+            <ul>
+                <i class="fa-solid fa-graduation-cap"></i><li><a href="#">PROGRAMAS</a></li>
+                <i class="fa-solid fa-user-graduate"></i><li><a href="#">ESTUDIANTES</a></li>
+                <i class="fa-solid fa-user"></i><li><a href="#">INGRESE</a></li>
+            </ul>
+            <div class="buscarbox">
+                <input type="text" placeholder="Buscar dato...">
+            </div>
+            <div id="reguser">
+                <i class="fa-solid fa-user-pen"></i><a href="#">REGISTRAR</a>
+            </div>
+        </nav>
+        <center>
+            <section id="main">
+                <figure>
+                    <img src="./img/HTML5.png" alt="" width="100" height="100">
+                    <img src="./img/css3.png" alt="" width="100" height="100">
+                    <img src="./img/JAVASCRIPT.png" alt="" width="100" height="100">
+                    <img src="./img/php.png" alt="">
+                    <img src="./img/mysql-logo2.jpg" alt="" width="100" height="100">
+                </figure>
+                <br>
+                <!-- sección de escuelas de estudio -->
+                <article class="programa">
+                    <h1>SISTEMAS</h1>
+                    <a href="https://www.incap.edu.co/programas/auxiliar-en-operacion-de-programas-informaticos-y-bases-de-datos.html"><img src="./img/logo tecnologia.png" alt="" width="100" height="100"></a>
+                </article>
+                <article class="programa">
+                    <h1>DISEÑO GRÁFICO</h1>
+                    <a href="https://www.incap.edu.co/programas/auxiliar-comunicacion-grafica-publicitaria.html"><img src="./img/logo diseno.png" alt=""></a>
+                </article>
+                <article class="programa">
+                    <h1>CONTABILIDAD</h1>
+                    <a href="https://www.incap.edu.co/programas/auxiliar-en-contabilidad-y-finanzas.html"><img src="./img/logo negocios.png" alt="" width="100" height="100"></a>
+                </article>
+                <article class="programa">
+                    <h1>SEGURIDAD OCUPACIONAL</h1>
+                    <a href="https://www.incap.edu.co/programas/auxiliar-de-seguridad-en-el-trabajo.html"><img src="./img/logo industrial.png" alt="" width="100" height="100"></a>
+                </article>
+                <article class="programa">
+                    <h1>ENFERMERÍA</h1>
+                    <a href="https://www.incap.edu.co/programas/auxiliar-en-enfermeria.html"> <img src="./img/logo salud.png" alt="" width="100" height="100"></a>
+                </article>
+                <article class="programa">
+                    <h1>GASTRONOMÍA</h1>
+                    <a href="https://www.incap.edu.co/programas/auxiliar-en-cocina-nacional-e-internacional.html"><img src="./img/logo gastronomia.png" alt="" width="100" height="100"></a>
+                </article>
+            </section>
+        </center>
+        <aside id="sidebar">
+            <h1>VDEOS DE INTERÉS</h1>
+            <br><br>
+            <h1>APRENDE MYSQL</h1>
+            <iframe width="auto" height="auto" src="https://www.youtube.com/embed/4KJ4AN6YLeE?si=o7tDigwB2dBQGuHu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <br><br>
+            <h1>APRENDE PHP</h1>
+            <iframe width="auto" height="auto" src="https://www.youtube.com/embed/ykGRYEX0n60?si=Q-0-tCEuQKhizod5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </aside>
+        <footer id="footer">
+            <div id="redes">
+                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://web.whatsapp.com"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+            <p>Derechos reservados &copy;@2023 Cristhian Prieto</p>
+        </footer>
+    </div>
 </body>
 </html>
