--- a/Semana 5/INDEX.html
+++ b/Semana 5/INDEX.html
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-user-graduate"></i><li><a href="#">ESTUDIANTES</a></li>
                 <i class="fa-solid fa-user"></i><li><a href="#">INGRESE</a></li>
             </ul>
-            <div class="buscarbox">
+            <div id="buscarbox">
                 <input type="text" placeholder="Buscar dato...">
             </div>
             <div id="reguser">
@@ -68,7 +68,7 @@
             </section>
         </center>
         <aside id="sidebar">
-            <h1>VDEOS DE INTERÉS</h1>
+            <h1>VIDEOS DE INTERÉS</h1>
             <br><br>
             <h1>APRENDE MYSQL</h1>
             <iframe width="auto" height="auto" src="https://www.youtube.com/embed/4KJ4AN6YLeE?si=o7tDigwB2dBQGuHu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
