--- a/Semana 9/contacto.html
+++ b/Semana 9/contacto.html
@@ -15,7 +15,7 @@
 <div class="row">
 <div class="col-xs-5 header-logo">
 <br>
-<a href="index.html"><img src="img/klipartz.com (12).png" alt="" class="img-responsive logo"></a>
+<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="100" height="100"></a>
 </div>
 <div class="col-md-7">
 <nav class="navbar navbar-default">
@@ -53,10 +53,10 @@
 <div class="col-md-5 contact-info text-left">
 <h3>Información de Contacto</h3>
 <div class="info-detail">
-<ul><li><i class="fa fa-calendar"></i><span>Lunes - Viernes:</span> 8:00 AM to 10:00 PM</li></ul>
-<ul><li><i class="fa fa-map-marker"></i><span>Dirección:</span> Av Americas 356-22</li></ul>
-<ul><li><i class="fa fa-phone"></i><span>Telefono:</span> 3053577706</li></ul>
-<ul><li><i class="fa fa-envelope"></i><span>Correo:</span> info@mipagina.com</li></ul></div></div>
+<ul><li><i class="fa fa-calendar"></i><span>Lunes - Sábado:</span> 10:00 AM to 7:00 PM</li></ul>
+<ul><li><i class="fa fa-map-marker"></i><span>Dirección:</span> Calle 56 #85G11</li></ul>
+<ul><li><i class="fa fa-phone"></i><span>Telefono:</span> 3017927292</li></ul>
+<ul><li><i class="fa fa-envelope"></i><span>Correo:</span> musitienda@gmail.com</li></ul></div></div>
 <div class="col-md-6 col-md-offset-1 contact-form">
 <h3>Dejanos un Mensaje</h3>
 <form class="form">
