--- a/Semana 9/index.html
+++ b/Semana 9/index.html
@@ -97,8 +97,8 @@
 	      	<div class="col-md-8">
 		        <h1>QUE OFRECEMOS</h1>
 		        <hr>
-		        <p>Brindamos servicios médicos veterinarios a la comunidad. Contribuimos al control y prevención de las principales enfermedades zoonóticas de animales. Proyectamos el resultado de investigaciones en el área de Sanidad Animal mediante la implementación de cursos de capacitación a la comunidad en general.</p>
-		        <p>Te ofrecemos una asistencia completa y de calidad a tu mascota. Nuestro principal objetivo es mantener la salud y el bienestar de nuestros animales y ayudarlos a restablecerse cuando están enfermos. Para ello, contamos con un personal altamente cualificado e instalaciones modernas y bien equipadas.</p>
+		        <p>Brindamos servicios musicales a la comunidad. Contribuimos al control y reparación de CDs y vinilos que estén en mal estado. Proyectamos la actualización de nueva música cada mes, mediante la opinión de los compradores.</p>
+		        <p>Te ofrecemos una asesoría completa y de calidad a tus oídos. Nuestro principal objetivo es traerte a tus artistas favoritos al alcance de tus manos y ayudarlos a ser más reconocidos y a ti para empezar tu gran colección de música, una tradición que nunca va a morir con el paso de los años.</p>
 
 		        <a class="btn btn-primary btn-lg" href="#">Ver Más &raquo;</a>
 				
@@ -107,10 +107,10 @@
 		        <h1>CONTACTO</h1>
 		        <hr>
 		        <address>
-		          <p><strong>Av las Americas 356-24</strong></p>		          
+		          <p><strong>Calle 56 #85G11</strong></p>		          
 		          <p>Bogota, Colombia</p>
-		          <p><strong>Telefono: 3053577706</strong></p>
-		          <p><strong>Email: name@example.com</strong></p>
+		          <p><strong>Telefono: 3017927292</strong></p>
+		          <p><strong>Email: musitienda@gmail.com</strong></p>
 	        	</address>
 	      	</div>
     	</div>
@@ -123,7 +123,7 @@
 	<div class="container">
 		<div class="row">
 			<h2>Nuestros Productos</h2>
-			<h4>Tenemos una gran variedad de servicios para todas tus mascotas. </h4>
+			<h4>Tenemos una gran variedad de productos para tus oídos </h4>
 
 			<div class="col-md-3 col-sm-6">
 				<div class="single-service">
@@ -208,10 +208,10 @@
 					<div class="col-md-5 contact-info text-left">
 						<h3>Informacion de Contacto</h3>
 						<div class="info-detail">
-							<ul><li><i class="fa fa-calendar"></i><span>Lunes - Viernes:</span> 8:00 AM to 10:00 PM</li></ul>
-							<ul><li><i class="fa fa-map-marker"></i><span>Direccion:</span> Av Americas 35-22</li></ul>
-							<ul><li><i class="fa fa-phone"></i><span>Telefono:</span> 3053577706</li></ul>
-							<ul><li><i class="fa fa-envelope"></i><span>Correo:</span> info@mipagina.com</li></ul>
+							<ul><li><i class="fa fa-calendar"></i><span>Lunes - Sábado:</span> 10:00 AM to 7:00 PM</li></ul>
+							<ul><li><i class="fa fa-map-marker"></i><span>Direccion:</span> Calle 56 #85G11</li></ul>
+							<ul><li><i class="fa fa-phone"></i><span>Telefono:</span> 3017927292</li></ul>
+							<ul><li><i class="fa fa-envelope"></i><span>Correo:</span> musitienda@gmail.com</li></ul>
 						</div>
 					</div>
 
