--- a/Semana 9/nosotros.html
+++ b/Semana 9/nosotros.html
@@ -16,7 +16,7 @@
 			<div class="row">
 				<div class="col-xs-5 header-logo">
 					<br>
-					<a href="index.html"><img src="img/klipartz.com (12).png" alt="" class="img-responsive logo"></a>
+					<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="100" height="100"></a>
 				</div>
 
 				<div class="col-md-7">
@@ -52,13 +52,13 @@
 <section class="about text-center">
 	<div class="container">
 		<div class="row">
-			<h2>Nuestra Veterinaria</h2>
-			<h4>Lleva mas de 7 años llegando a cada uno de los hogares del pais ayudando a las mascotascon amor</h4>
+			<h2>Nuestra Tienda de música</h2>
+			<h4>Lleva mas de 10 años llevando la mejor música a cada uno de los hogares del pais</h4>
 
 			<div class="col-md-4 col-sm-6">
 				<div class="single-about-detail clearfix">
 					<div class="about-img">
-						<img src="img/vision.jpg" alt="">
+						<img src="img/clientes.jpg" alt="">
 					</div>
 
 					<div class="about-details">
@@ -67,7 +67,7 @@
 						</div>
 
 						<h3>Visión</h3>
-						<p>Buscar la excelencia en la prevención, detección y curación de enfermedades, aumentando el nivel de seguridad sanitaria en quienes conviven con ellos y hacerlo de forma sostenible, rentable, profesional y ética</p>
+						<p>Incrementar las ventas de productos musicales en físico, dando el toque de originalidad y felicidad que da al escuchar tu canción favorita</p>
 					</div>
 				</div>
 			</div>
@@ -75,7 +75,7 @@
 			<div class="col-md-4 col-sm-6">
 				<div class="single-about-detail">
 					<div class="about-img">
-						<img class="img-responsive" src="img/mision.jpg" alt="">
+						<img class="img-responsive" src="img/Asesor2.jpeg" alt="">
 					</div>
 
 					<div class="about-details">
@@ -84,7 +84,7 @@
 						</div>
 
 						<h3>Misión</h3>
-						<p>Ofrecer bienestar tanto animal, como a las familias de nuestros pacientes a través de la prestación de servicios médicos veterinarios y complementarios, entregando calidad y satisfacción, superando las expectativas de nuestros clientes</p>
+						<p>Ofrecer los mejores trabajos musicales de los artistas al mejor precio, estando al tanto de las tendencias y la música de hoy en día</p>
 					</div>
 				</div>
 			</div>
@@ -93,7 +93,7 @@
 			<div class="col-md-4 col-sm-6">
 				<div class="single-about-detail">
 					<div class="about-img">
-						<img class="img-responsive" src="img/valores.jpg" alt="">
+						<img class="img-responsive" src="img/asesor.jpg" alt="">
 					</div>
 
 					<div class="about-details">
@@ -102,7 +102,7 @@
 						</div>
 
 						<h3>Valores</h3>
-						<p>Amor, Responsabilidad, Claridad, Respeto, Coherencia a todos nuestros clientes</p>
+						<p>Amor, empatía, aceptación, originalidad, estilo, Responsabilidad, Claridad, Respeto</p>
 					</div>
 				</div>
 			</div>
