--- a/Semana 9/productos.html
+++ b/Semana 9/productos.html
@@ -16,7 +16,7 @@
 			<div class="row">
 				<div class="col-xs-5 header-logo">
 					<br>
-					<a href="index.html"><img src="img/klipartz.com (12).png" alt="" class="img-responsive logo"></a>
+					<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="100" height="100"></a>
 				</div>
 
 				<div class="col-md-7">
@@ -58,12 +58,12 @@
 			<div class="col-md-4 col-sm-6">
 				<div class="single-about-detail clearfix">
 					<div class="about-img">
-						<img src="img/servicios clinicos.jpg" alt="">
+						<img src="img/CDs.jpeg" alt="">
 					</div>
 
 					<div class="about-details">
 
-						<h3>Servicios clinicos</h3>
+						<h3>CDs</h3>
 
 					</div>
 				</div>
@@ -72,13 +72,13 @@
 			<div class="col-md-4 col-sm-6">
 				<div class="single-about-detail">
 					<div class="about-img">
-						<img class="img-responsive" src="img/servicios preventivos.webp" alt="">
+						<img class="img-responsive" src="img/Vinilos.jpg" alt="">
 					</div>
 
 					<div class="about-details">
 
 
-						<h3>Servicios preventivos de enfermedades</h3>
+						<h3>Vinilos</h3>
 
 					</div>
 				</div>
@@ -88,12 +88,12 @@
 			<div class="col-md-4 col-sm-6">
 				<div class="single-about-detail">
 					<div class="about-img">
-						<img class="img-responsive" src="img/suministro medicamentos.jpg" alt="">
+						<img class="img-responsive" src="img/albumes de kpop2.jpg" alt="">
 					</div>
 
 					<div class="about-details">
 
-						<h3>Suministro de medicamentos, vacunas, etc</h3>
+						<h3>Kpop</h3>
 
 					</div>
 				</div>
@@ -103,12 +103,12 @@
 			<div class="col-md-4 col-sm-6">
 				<div class="single-about-detail clearfix">
 					<div class="about-img">
-						<img src="img/proteccion salud.jpeg" alt="">
+						<img src="img/tocadiscos.jpg" alt="">
 					</div>
 
 					<div class="about-details">
 
-						<h3>Proteccion de la salud</h3>
+						<h3>equipos de reproducción</h3>
 
 					</div>
 				</div>
