--- a/Semana 9/contacto.html
+++ b/Semana 9/contacto.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Mi Veterinaria </title>
+	<title>Mi tienda de música </title>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600italic,400,800,700,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=BenchNine:300,400,700' rel='stylesheet' type='text/css'>
+	<!-- link de font awesome -->
+	<script src="https://kit.fontawesome.com/a1124a3708.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <header class="top-header">
@@ -15,7 +17,7 @@
 <div class="row">
 <div class="col-xs-5 header-logo">
 <br>
-<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="100" height="100"></a>
+<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="150" height="150"></a>
 </div>
 <div class="col-md-7">
 <nav class="navbar navbar-default">
@@ -54,7 +56,7 @@
 <h3>Información de Contacto</h3>
 <div class="info-detail">
 <ul><li><i class="fa fa-calendar"></i><span>Lunes - Sábado:</span> 10:00 AM to 7:00 PM</li></ul>
-<ul><li><i class="fa fa-map-marker"></i><span>Dirección:</span> Calle 56 #85G11</li></ul>
+<ul><li><i class="fa fa-map-marker"></i><span>Dirección:</span> CA Caracas 63-66</li></ul>
 <ul><li><i class="fa fa-phone"></i><span>Telefono:</span> 3017927292</li></ul>
 <ul><li><i class="fa fa-envelope"></i><span>Correo:</span> musitienda@gmail.com</li></ul></div></div>
 <div class="col-md-6 col-md-offset-1 contact-form">
@@ -71,12 +73,13 @@
 <div class="container">
 <div class="row">
 <div class="col-xs-6 footer-para">
-<p>&copy; <a href="https://www.mipagina.com"></a> Todos los Derechos Reservados</p>
+<p>&copy; <a href="https://www.mipagina.com"></a> Todos los Derechos Reservados @Cristhian Prieto</p>
 </div>
 <div class="col-xs-6 text-right">
-<a href=""><i class="fa fa-facebook"></i></a>
-<a href=""><i class="fa fa-twitter"></i></a>
-<a href=""><i class="fa fa-instagram"></i></a></div></div></div></footer>
+	<a href=""><i class="fa fa-facebook"></i></a>
+	<a href=""><i class="fa fa-instagram"></i></a>
+	<a href=""><i class="fa-brands fa-whatsapp"></i></a>
+	<a href=""><i class="fa-brands fa-tiktok"></i></a></div></div></div></footer>
 <script src="js/jquery-2.1.1.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<script src="js/gmaps.js"></script>
