--- a/Semana 9/index.html
+++ b/Semana 9/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Mi Veterinaria</title> 
+	<title>Mi tienda de música</title> 
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600italic,400,800,700,300' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=BenchNine:300,400,700' rel='stylesheet' type='text/css'>
+	<!-- link de font awesome -->
+	<script src="https://kit.fontawesome.com/a1124a3708.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 	<!-- SECCION CABECERA: COLOCAR LOGO EMPRESA -->
@@ -16,7 +17,7 @@
 			<div class="row">
 				<div class="col-xs-5 header-logo">
 					<br>
-					<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="100" height="100"></a>
+					<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="150" height="150"></a>
 				</div>
 				<!-- SECCION BARRA NAVEGACIÓN: COLOCAR BARRA MENU -->
 				<div class="col-md-7">
@@ -31,7 +32,6 @@
 					        <span class="icon-bar"></span>
 					      </button>
 					    </div>
-
 					    
 					    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					      
@@ -52,7 +52,6 @@
 	<section class="slider" id="home">
 		<div class="container-fluid">
 			<div class="row">
-
 			    <div id="carouselHacked" class="carousel slide carousel-fade" data-ride="carousel">
 					<div class="header-backup"></div>
 			        <!-- Wrapper for slides -->
@@ -209,7 +208,7 @@
 						<h3>Informacion de Contacto</h3>
 						<div class="info-detail">
 							<ul><li><i class="fa fa-calendar"></i><span>Lunes - Sábado:</span> 10:00 AM to 7:00 PM</li></ul>
-							<ul><li><i class="fa fa-map-marker"></i><span>Direccion:</span> Calle 56 #85G11</li></ul>
+							<ul><li><i class="fa fa-map-marker"></i><span>Direccion:</span> AV Caracas 63-66</li></ul>
 							<ul><li><i class="fa fa-phone"></i><span>Telefono:</span> 3017927292</li></ul>
 							<ul><li><i class="fa fa-envelope"></i><span>Correo:</span> musitienda@gmail.com</li></ul>
 						</div>
@@ -238,13 +237,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-6 footer-para">
-				<p>&copy; <a href="https://www.mipagina.com"></a> Todos los Derechos Reservados</p>
+				<p>&copy; <a href="https://www.mipagina.com"></a> Todos los Derechos Reservados @Cristhian Prieto</p>
 			</div>
 
 			<div class="col-xs-6 text-right">
 				<a href=""><i class="fa fa-facebook"></i></a>
-				<a href=""><i class="fa fa-twitter"></i></a>
 				<a href=""><i class="fa fa-instagram"></i></a>
+				<a href=""><i class="fa-brands fa-whatsapp"></i></a>
+				<a href=""><i class="fa-brands fa-tiktok"></i></a>
 			</div>
 		</div>
 	</div>
