--- a/Semana 9/nosotros.html
+++ b/Semana 9/nosotros.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Mi Veterinaria</title>
+	<title>Mi tienda de música</title>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600italic,400,800,700,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=BenchNine:300,400,700' rel='stylesheet' type='text/css'>
+	<!-- link de font awesome -->
+	<script src="https://kit.fontawesome.com/a1124a3708.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	
@@ -16,7 +18,7 @@
 			<div class="row">
 				<div class="col-xs-5 header-logo">
 					<br>
-					<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="100" height="100"></a>
+					<a href="index.html"><img src="img/logo alterno.jpg" alt="" class="img-responsive logo" width="150" height="150"></a>
 				</div>
 
 				<div class="col-md-7">
@@ -39,7 +41,7 @@
 					        <li><a class="menu" href="index.html" >INICIO</a></li>
 					        <li><a class="menu active" href="nosotros.html">NOSOTROS</a></li>
 					        <li><a class="menu" href="productos.html">PRODUCTOS </a></li>
-					        <li><a class="menu" href="contato.html"> CONTACTENOS</a></li>
+					        <li><a class="menu" href="contacto.html"> CONTACTENOS</a></li>
 					      </ul>
 					    </div>
 					  </div>
@@ -117,13 +119,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-6 footer-para">
-				<p>&copy; <a href="https://www.mipagina.com"></a> Todos los Derechos Reservados</p>
+				<p>&copy; <a href="https://www.mipagina.com"></a> Todos los Derechos Reservados @Cristhian Prieto</p>
 			</div>
 
 			<div class="col-xs-6 text-right">
 				<a href=""><i class="fa fa-facebook"></i></a>
-				<a href=""><i class="fa fa-twitter"></i></a>
 				<a href=""><i class="fa fa-instagram"></i></a>
+				<a href=""><i class="fa-brands fa-whatsapp"></i></a>
+				<a href=""><i class="fa-brands fa-tiktok"></i></a>
 			</div>
 		</div>
 	</div>
