--- a/Semana 16/Taller 4 - Formulario input.html
+++ b/Semana 16/Taller 4 - Formulario input.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/Formulario 16.css">
-    <script src="./js/Formulario 4.js"></script>
+    <script src="./js/Formulario Input.js"></script>
 </head>
 <body>
     <h1>Materia programación JavaScript</h1>
@@ -14,13 +14,13 @@
             <caption>Reporte de notas</caption>
             <tr><th>Nombre</th><td><input type="text" id="nom"></td></tr>
             <tr><th>Curso</th><td><input type="text" id="cur"></td></tr>
-            <tr><th>Nota 1</th><td><input type="text" id="not1"></td></tr>
-            <tr><th>Nota 2</th><td><input type="text" id="not2"></td></tr>
-            <tr><th>Nota 3</th><td><input type="text" id="not3"></td></tr>
+            <tr><th>Nota 1</th><td><input type="text" id="n1"></td></tr>
+            <tr><th>Nota 2</th><td><input type="text" id="n2"></td></tr>
+            <tr><th>Nota 3</th><td><input type="text" id="n3"></td></tr>
             <tr><th><div align="center"><input type="button" value="Calcular" onclick="calcular()"></div></th>
             <th><div align="center"><input type="reset" value="Borrar" id="boton1"></div></th></tr>
-            <tr><th>Clasificación</th><td><input type="text" id="cl"></td></tr>
-            <tr><th>Definitiva</th><td><input type="text" id="def"></td></tr>
+            <tr><th>Clasificación</th><td><input type="text" id="c"></td></tr>
+            <tr><th>Definitiva</th><td><input type="text" id="d"></td></tr>
         </table>
     </form>
 </body>
